--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="main_color">@color/corn_flower_blue</color>
+    <color name="sub_color">@color/corn_flower_blue</color>
+
+    <color name="default_background_color">#e8e8e8</color>
 </resources>
