--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!--다크 모드-->
-    <style name="Theme.DarkMode" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorPrimary">@color/black</item>
-        <item name="android:windowBackground">@color/black</item>
-        <item name="android:windowLightStatusBar">false</item>
-        <item name="android:navigationBarColor">@color/black</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
 
     <!--라이트 모드-->
-    <style name="Theme.LightMode" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.SystemMode" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorPrimary">@color/white</item>
         <item name="android:windowBackground">@color/white</item>
@@ -19,5 +9,7 @@
         <item name="android:navigationBarColor" tools:targetApi="27">@color/white</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="27">true</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/scdream4_regular</item>
     </style>
+
 </resources>
