--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="adapter"
+            type="com.hjiee.base.BaseItemsApdater" />
 
     </data>
 
@@ -10,12 +15,64 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/include_toolbar"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:title="@{@string/str_add}"
-            layout="@layout/layout_navigation_toolbar"/>
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/ib_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:paddingStart="20dp"
+                android:paddingEnd="10dp"
+                android:paddingVertical="20dp"
+                android:src="@drawable/ic_baseline_arrow_back_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/edt_search"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:singleLine="true"
+                android:paddingHorizontal="12dp"
+                android:textSize="12sp"
+                android:textCursorDrawable="@drawable/cursor"
+                android:background="@drawable/rectangle_default_color_radius_8"
+                app:layout_constraintTop_toTopOf="@+id/ib_back"
+                app:layout_constraintBottom_toBottomOf="@+id/ib_back"
+                app:layout_constraintStart_toEndOf="@+id/ib_back"
+                app:layout_constraintEnd_toStartOf="@+id/ib_search" />
+
+            <ImageButton
+                android:id="@+id/ib_search"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:background="@android:color/transparent"
+                android:paddingVertical="20dp"
+                android:paddingEnd="20dp"
+                android:paddingStart="10dp"
+                android:src="@drawable/ic_baseline_search_24"
+                app:layout_constraintBottom_toBottomOf="@+id/ib_back"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/ib_back" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:overScrollMode="never"
+            android:paddingHorizontal="18dp"
+            app:adapter="@{adapter}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_toolbar"
+            tools:listitem="@layout/item_card_subscription" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
