--- a/app/src/main/res/layout/item_card_subscription.xml
+++ b/app/src/main/res/layout/item_card_subscription.xml
@@ -6,26 +6,38 @@
     <data>
         <variable
             name="subscription"
-            type="com.hjiee.subscription.SubscriptionModel" />
+            type="com.hjiee.subscription.data.local.db.SubscriptionEntity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:foreground="?attr/selectableItemBackground"
-        android:background="@drawable/rectangle_default_color_radius_8"
+        android:background="@drawable/rectangle_default_color_radius_12"
         android:layout_marginBottom="10dp"
         android:elevation="3dp"
         android:padding="18dp">
 
         <TextView
+            android:id="@+id/tv_product"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{subscription.product}"
+            tools:text="Youtube"
+            android:textSize="20sp"
+            android:fontFamily="@font/scdream6_bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_price"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_product"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             android:text="@{subscription.title}"
             tools:text="유튜브 프리미엄" />
@@ -34,10 +46,10 @@
             android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_title"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_title"
             android:text="@{@string/format_price(subscription.price)}"
             tools:text="8,690원" />
 
