--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,54 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="black_alpha_100">#FF000000</color> <!--100%-->
+    <color name="black_alpha_95">#F2000000</color> <!--95%-->
+    <color name="black_alpha_90">#E6000000</color> <!--90%-->
+    <color name="black_alpha_85">#D9000000</color> <!--85%-->
+    <color name="black_alpha_80">#CC000000</color> <!--80%-->
+    <color name="black_alpha_75">#BF000000</color> <!--75%-->
+    <color name="black_alpha_70">#B3000000</color> <!--70%-->
+    <color name="black_alpha_65">#A6000000</color> <!--65%-->
+    <color name="black_alpha_60">#99000000</color> <!--60%-->
+    <color name="black_alpha_55">#8C000000</color> <!--55%-->
+    <color name="black_alpha_50">#80000000</color> <!--50%-->
+    <color name="black_alpha_45">#73000000</color> <!--45%-->
+    <color name="black_alpha_40">#66000000</color> <!--40%-->
+    <color name="black_alpha_35">#59000000</color> <!--35%-->
+    <color name="black_alpha_30">#4D000000</color> <!--30%-->
+    <color name="black_alpha_25">#40000000</color> <!--25%-->
+    <color name="black_alpha_20">#33000000</color> <!--20%-->
+    <color name="black_alpha_15">#26000000</color> <!--15%-->
+    <color name="black_alpha_10">#1A000000</color> <!--10%-->
+    <color name="black_alpha_05">#0D000000</color> <!--5%-->
+    <color name="black_alpha_00">#00000000</color> <!--0%-->
+
+    <color name="white_alpha_100">#FFffffff</color> <!--100%-->
+    <color name="white_alpha_95">#F2ffffff</color> <!--95%-->
+    <color name="white_alpha_90">#E6ffffff</color> <!--90%-->
+    <color name="white_alpha_85">#D9ffffff</color> <!--85%-->
+    <color name="white_alpha_80">#CCffffff</color> <!--80%-->
+    <color name="white_alpha_75">#BFffffff</color> <!--75%-->
+    <color name="white_alpha_70">#B3ffffff</color> <!--70%-->
+    <color name="white_alpha_65">#A6ffffff</color> <!--65%-->
+    <color name="white_alpha_60">#99ffffff</color> <!--60%-->
+    <color name="white_alpha_55">#8Cffffff</color> <!--55%-->
+    <color name="white_alpha_50">#80ffffff</color> <!--50%-->
+    <color name="white_alpha_45">#73ffffff</color> <!--45%-->
+    <color name="white_alpha_40">#66ffffff</color> <!--40%-->
+    <color name="white_alpha_35">#59ffffff</color> <!--35%-->
+    <color name="white_alpha_30">#4Dffffff</color> <!--30%-->
+    <color name="white_alpha_25">#40ffffff</color> <!--25%-->
+    <color name="white_alpha_20">#33ffffff</color> <!--20%-->
+    <color name="white_alpha_15">#26ffffff</color> <!--15%-->
+    <color name="white_alpha_10">#1Affffff</color> <!--10%-->
+    <color name="white_alpha_05">#0Dffffff</color> <!--5%-->
+    <color name="white_alpha_00">#00ffffff</color> <!--0%-->
+
     <color name="main_color">@color/corn_flower_blue</color>
     <color name="sub_color">@color/corn_flower_blue</color>
 
     <color name="default_background_color">#e8e8e8</color>
+    <color name="default_reversal_color">@color/black</color>
+    <color name="default_main_system_mode_color">@color/white_alpha_50</color>
 </resources>
