--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,6 +56,6 @@
     <color name="sub_color">@color/corn_flower_blue</color>
 
     <color name="default_background_color">#e8e8e8</color>
-    <color name="default_reversal_color">@color/black</color>
-    <color name="default_main_system_mode_color">@color/white_alpha_50</color>
+    <color name="default_reversal_text_color">@color/black</color>
+    <color name="default_main_system_mode_color">@color/default_background_color</color>
 </resources>
